--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
       text-align: center;
       background: linear-gradient(135deg, #007ACC, #009900, #FFD700, #FF3300, #6A0DAD, #FF69B4);
       color: #333;
-      margin
-
-: 0;
+      margin: 0;
       padding: 0;
       overflow-x: hidden;
     }
@@ -644,7 +642,23 @@
       }
       document.getElementById('praiseText').innerHTML = praiseText;
 
-      sendToFirestore(userInfo, selectedWords, styleScores, percentages, dominantStyles);
+      const data = {
+        userInfo: userInfo,
+        selectedWords: selectedWords,
+        styleScores: styleScores,
+        percentages: percentages,
+        dominantStyles: dominantStyles
+      };
+
+      // Send data to Google Sheet
+      fetch(https://script.google.com/macros/s/AKfycbyr-NKLbcfqaHRZJJfT1Bioarq954abgWUcUkc8pw9NyJdadSILPje2liT35CpTTmbQ/exec, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(data)
+      })
+      .then(response => response.text())
+      .then(result => console.log(result))
+      .catch(error => console.error('Error sending to Google Sheet:', error));
     }
 
     function downloadScorecard() {
@@ -658,47 +672,6 @@
         pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
         pdf.save(`${userInfo.name}_Leadership_Scorecard.pdf`);
       });
-    }
-
-    async function sendToFirestore(userInfo, selectedWords, styleScores, percentages, dominantStyles) {
-      const { initializeApp } = await import('https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js');
-      const { getFirestore, doc, setDoc } = await import('https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js');
-
-      const firebaseConfig = {
-        apiKey: "AIzaSyDsLniM6VGqobILzm2Jt9LIn8necnQBzNg",
-        authDomain: "hbdi-star-shaigan.firebaseapp.com",
-        projectId: "hbdi-star-shaigan",
-        storageBucket: "hbdi-star-shaigan.firebasestorage.app",
-        messagingSenderId: "945984031861",
-        appId: "1:945984031861:web:e3d851c1a38ad4c0333c3c",
-        measurementId: "G-QTVYWLMJ1Y"
-      };
-
-      const app = initializeApp(firebaseConfig);
-      const db = getFirestore(app);
-
-      const timestamp = new Date().toISOString();
-      const data = {
-        userInfo: {
-          name: userInfo.name,
-          designation: userInfo.designation,
-          team: userInfo.team,
-          city: userInfo.city
-        },
-        selectedWords: selectedWords,
-        styleScores: styleScores,
-        percentages: percentages,
-        dominantStyles: dominantStyles,
-        timestamp: timestamp
-      };
-
-      const docId = `${userInfo.name}_${Date.now()}`;
-      try {
-        await setDoc(doc(db, "leadershipResults", docId), data);
-        console.log("Data successfully written to Firestore!");
-      } catch (error) {
-        console.error("Error writing to Firestore: ", error);
-      }
     }
   </script>
 </body>
